--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-/**
-* Template Name: Plato
-* Updated: May 30 2023 with Bootstrap v5.3.0
-* Template URL: https://bootstrapmade.com/plato-responsive-bootstrap-website-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -16,12 +8,12 @@ body {
 }
 
 a {
-  color: #4eb478;
+  color: #115da7;
   text-decoration: none;
 }
 
 a:hover {
-  color: #72c393;
+  color: #2ea2dc;
   text-decoration: none;
 }
 
@@ -35,10 +27,11 @@ h6 {
 }
 
 .wrap {
-  max-width: 1440px;
+  /* max-width: 1440px; */
   margin: auto;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  overflow-x: hidden;
 }
 
 /*--------------------------------------------------------------
@@ -51,7 +44,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #4eb478;
+  background: #115da7;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -90,8 +83,8 @@ h6 {
   height: 70px;
   z-index: 997;
   transition: all 0.5s;
-  background: #000;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+  background: #115da7;;
+  box-shadow: 0px 0px 20px 0px rgba(17, 93, 167, 0.1);
 }
 
 #header .logo h1 {
@@ -165,7 +158,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #72c393;
+  color: #2ea2dc;
 }
 
 .navbar .dropdown ul {
@@ -200,7 +193,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .navbar .dropdown:hover>ul {
@@ -295,7 +288,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .navbar-mobile .getstarted,
@@ -330,7 +323,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -342,11 +335,11 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
-  background: url("../img/hero-bg.jpg") top center;
+  height: 100vh;
+  background: url("../img/background.jpg") top center;
   background-size: cover;
   position: relative;
-  border-bottom: 1px solid #222;
+  border-bottom: 1px solid #115da7;
 }
 
 #hero:before {
@@ -374,9 +367,9 @@ h6 {
 }
 
 #hero h1 {
-  margin: 0 0 30px 0;
-  font-size: 48px;
-  font-weight: 700;
+  margin: 50px 0 30px 0;
+  font-size: 44px;
+  font-weight: 500;
   line-height: 56px;
   color: #fff;
 }
@@ -388,21 +381,12 @@ h6 {
 }
 
 #hero .btn-get-started {
-  font-family: "Raleway", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
+  font-size: 56px;
   letter-spacing: 2px;
   display: inline-block;
   padding: 10px 28px;
-  border-radius: 5px;
   transition: 0.5s;
-  border: 2px solid #4eb478;
   color: #fff;
-}
-
-#hero .btn-get-started:hover {
-  background: #4eb478;
-  border: 2px solid #4eb478;
 }
 
 @media (min-width: 1024px) {
@@ -457,7 +441,7 @@ section {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #4eb478;
+  color: #115da7;
   position: relative;
   z-index: 2;
 }
@@ -521,7 +505,7 @@ section {
 .about .content .icon-box i {
   font-size: 48px;
   float: left;
-  color: #4eb478;
+  color: #115da7;
 }
 
 .about .content .icon-box p {
@@ -642,7 +626,7 @@ section {
 }
 
 .features .card:hover .card-title a {
-  color: #4eb478;
+  color: #115da7;
 }
 
 @media (max-width: 1024px) {
@@ -685,8 +669,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #4eb478;
-  border: 2px solid #4eb478;
+  background: #115da7;
+  border: 2px solid #115da7;
 }
 
 /*--------------------------------------------------------------
@@ -705,7 +689,7 @@ section {
 
 .services .icon-box i {
   float: left;
-  color: #4eb478;
+  color: #115da7;
   font-size: 40px;
   line-height: 0;
 }
@@ -723,7 +707,7 @@ section {
 }
 
 .services .icon-box .icon-box:hover h4 a {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .services .icon-box p {
@@ -762,7 +746,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -832,7 +816,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -874,11 +858,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4eb478;
+  border: 1px solid #115da7;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4eb478;
+  background-color: #115da7;
 }
 
 .portfolio-details .portfolio-info {
@@ -1011,7 +995,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4eb478;
+  background-color: #115da7;
 }
 
 @media (min-width: 1024px) {
@@ -1091,7 +1075,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .team .member .social i {
@@ -1138,7 +1122,7 @@ section {
 
 .pricing h4 {
   font-size: 46px;
-  color: #4eb478;
+  color: #115da7;
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 25px;
@@ -1163,7 +1147,7 @@ section {
 }
 
 .pricing ul i {
-  color: #4eb478;
+  color: #115da7;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1195,14 +1179,14 @@ section {
 }
 
 .pricing .get-started-btn:hover {
-  color: #4eb478;
-  border-color: #4eb478;
+  color: #115da7;
+  border-color: #115da7;
 }
 
 .pricing .featured {
   z-index: 10;
   margin: -30px -5px 0 -5px;
-  background: #4eb478;
+  background: #115da7;
 }
 
 .pricing .featured h3,
@@ -1221,7 +1205,7 @@ section {
 }
 
 .pricing .featured .get-started-btn:hover {
-  color: #4eb478;
+  color: #115da7;
   background: #fff;
 }
 
@@ -1320,7 +1304,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #4eb478;
+  color: #115da7;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1348,7 +1332,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #4eb478;
+  color: #115da7;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #cbe9d8;
@@ -1424,7 +1408,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #4eb478;
+  border-color: #115da7;
 }
 
 .contact .php-email-form input {
@@ -1436,7 +1420,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #4eb478;
+  background: #115da7;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1563,7 +1547,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px 3px 20px;
-  background: #4eb478;
+  background: #115da7;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 5px 5px 0;
@@ -1619,7 +1603,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #4eb478;
+  color: #115da7;
   font-size: 18px;
   line-height: 1;
 }
@@ -1643,7 +1627,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #4eb478;
+  color: #115da7;
 }
 
 #footer .footer-top .social-links a {
@@ -1662,7 +1646,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #4eb478;
+  background: #115da7;
   color: #fff;
   text-decoration: none;
 }
