--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,12 @@ h6 {
   border-bottom: 1px solid #115da7;
 }
 
+/* .hero-img {
+  margin: 0 auto 0 auto;
+  width: '100%';
+  max-width: 300px;
+} */
+
 #hero:before {
   content: "";
   background: rgba(0, 0, 0, 0.7);
@@ -381,7 +387,7 @@ h6 {
 }
 
 #hero .btn-get-started {
-  font-size: 56px;
+  font-size: 44px;
   letter-spacing: 2px;
   display: inline-block;
   padding: 10px 28px;
